# gemini

./: CMakeLists.txt  CMakePresets.json  README.md  build.sh  main.c
M4/: CMakeLists.txt  main.c
M7/: CMakeLists.txt  main.c  startup_stm32h745xx.s
board/linker/: STM32H745XI_m4_flash.ld  STM32H745XI_m7_flash.ld
cmake/: arm_gcc_toolchain.cmake  post_build.cmake
cmake/compile_options/: common_options.cmake  compile_options_m4.cmake  compile_options_m7.cmake
linker/: STM32H745XI_M4_flash.ld
m4/: CMakeLists.txt  main.c
m4/inc/: CMakeLists.txt  stm32h7xx_it.h
m7/: CMakeLists.txt  main.c
m7/inc/: stm32h7xx_hal_conf.h  stm32h7xx_it.h
